Create Player function completed: - Create Player - Add Player into array todo: - Clone template and add player to list

--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
   <header>
 
   </header>
-  <div role="main">
+  <div id="main" role="main">
+    <div class="left">
+      <ul id="player-list">
+        <li class="template">
+          <p class="list-item-name">Name</p>
+        </li>
+      </ul><!-- #player-list -->
+    </div><!-- .left -->
+    <div class="right">
+      <div id="brackets">
 
+      </div><!-- #brackets -->
+    </div><!-- .right -->
   </div>
   <footer>
 
