--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
   <div id="main" role="main">
     <div class="left">
       <ul id="player-list">
+        <h2>Players: <span class="count">0</span></h2>
+        <div class="manager clearfix">
+          <a href="#" class="manager-link add">+</a>
+        </div>
         <li class="template">
           <p class="list-item-name">Name</p>
+          <p class="remove-container"><a href="#" class="manager-link remove">-</a></p>
         </li>
       </ul><!-- #player-list -->
     </div><!-- .left -->
