Crap ton of updates: Remove players with buttons Added some design elements Added "Add Player" form (not yet functional) Other minor details

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <ul id="player-list">
         <h2>Players: <span class="count">0</span></h2>
         <div class="manager clearfix">
+          <form id="player-form" action="" method="post">
+            <input type="text" class="name" name="name" value="Enter Player Name" />
+            <input type="submit" class="submit" value="Add" />
+          </form>
           <a href="#" class="manager-link add">+</a>
         </div>
         <li class="template">
