Phase One: Complete - removePlayer issue fixed, .live() saves the day!

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </form>
         <li class="template">
           <p class="list-item-name">Name</p>
-          <p class="remove-container"><a href="" class="manager-link remove"></a></p>
+          <p class="remove-container"><a href="" class="manager-link remove switch"></a></p>
         </li>
       </ul><!-- #player-list -->
     </div><!-- .left -->
