--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
           <h2>Configuration</h2>
           <form id="config-form" class="clearfix" action="">
           <div class="config-title">
-            <label>Event Title</label>
+            <label>Event Title:</label>
+            <p class="set input-title">Default Title</p>
             <input type="text" tabindex="1" class="name" name="name" value="Enter Event Name" />
           </div>
           <div class="config-type">
-            <label>Event Type</label>
+            <label>Event Type:</label>
+            <p class="set input-type">Limited Rounds</p>
             <select tabindex="2" class="type" name="type" />
               <option value="Limited Rounds">Limited Rounds</option>
               <option value="Single Elimination">Single Elimination</option>
@@ -85,8 +87,9 @@
             </select>
           </div>
           <div class="config-rounds">
-            <label>Event Rounds</label>
-            <input type="text" tabindex="3" class="rounds" name="rounds" value="Number of Rounds" />
+            <label>Event Rounds:</label>
+            <p class="set input-rounds">3</p>
+            <input type="text" tabindex="3" class="rounds" name="rounds" value="Enter # of Rounds" />
           </div>
           <input type="submit" class="submit" value="Save Changes" />
           </form>
