Phase 2: Complete Update: - Testing is Good - "Limited Rounds" is now "Swiss"

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <label>Event Type:</label>
               <p class="set input-type">Limited Rounds</p>
               <select tabindex="2" class="type hidden" name="type" />
-                <option value="Limited Rounds">Limited Rounds</option>
+                <option value="Swiss">Swiss</option>
                 <option value="Single Elimination">Single Elimination</option>
                 <option value="Double Elimination">Double Elimination</option>
                 <option value="Round Robin">Round Robin</option>
