Minor updates, Clear All is working, buildBrackets started.

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </li><!-- .config-container -->
         <li class="reset-all-container">
           <div id="new-tournament" class="clearfix">
-          <h2>New Tournament</h2>
-          <p>This will reset all your settings.</p>
+          <h2>Reset All</h2>
+          <p>This will forget all settings.</p>
           <span class="confirm cancel">Cancel</span>
           <span class="confirm do-it">Do it</span>
         </div>
@@ -116,9 +116,10 @@
           <h1>Event Name</h1>
           <h2>Event Type: <i>0 Rounds</i></h2>
         </hgroup>
-        <div class="round-template">
-          <ul class="match-template">
+        <div class="tourn-round round-template template">
+          <ul class="match-template template">
               <li><p class="player-name">Name</p></li>
+              <li class="versus"><p>Versus</p></li>
               <li><p class="player-name">Name</p></li>
           </ul>
         </div>
