randomizeList() & buildBrackets() created

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
           <form id="config-form" class="clearfix" action="">
             <div class="top clearfix">
               <h2>Configuration</h2>
-              <!--<a href="" class="manager-link add pos"></a>-->
             </div>
             <div class="config-title">
               <label>Event Title:</label>
@@ -117,7 +116,7 @@
           <h2>Event Type: <i>0 Rounds</i></h2>
         </hgroup>
         <div class="tourn-round round-template template">
-          <ul class="match-template template">
+          <ul class="match match-template template">
               <li><p class="player-name">Name</p></li>
               <li class="versus"><p>Versus</p></li>
               <li><p class="player-name">Name</p></li>
