Major HTML & CSS changes, Lots of functional updates, efficiency tweaks

--- a/index.html
+++ b/index.html
@@ -37,19 +37,11 @@
 
   </header>
   <div id="main" class="clearfix" role="main">
-    <div class="left clearfix">
-      <ul id="control-panel">
-        <li class="list-control">
-          <a href="" class="list-toggle ir">Player List</a>
-        </li>
-        <li class="config">
-          <a href="" class="config-toggle ir">Configuration</a>
-        </li>
-        <li class="reset">
-          <a href="" class="reset-all ir">Start New Tournament</a>
-        </li>
-      </ul><!-- #control-panel -->
-      <ul id="option-panels">
+    <div class="settings-toggle">
+      <a href="">Settings &amp; Stuff</a>
+    </div>
+    <div class="left">
+      <ul id="option-panels" class="option-close">
         <li class="player-list-container">
           <ul id="player-list">
             <div class="top clearfix">
@@ -108,6 +100,11 @@
         </div>
         </li><!-- .reset-all-confirm -->
       </ul><!-- #option-panels -->
+      <!--<ul id="control-panel">
+        <li class="list-control">
+          <a href="" class="list-toggle ir">Player List</a>
+        </li>
+      </ul>--><!-- #control-panel -->
     </div><!-- .left -->
     <div class="right">
       <div id="brackets">
