creating branch for work on player seating and bracket generation

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <h2>Reset All</h2>
           <p>This will forget all settings.</p>
           <span class="confirm cancel">Cancel</span>
-          <span class="confirm do-it">Do it</span>
+          <span class="confirm do-it">Kill it</span>
         </div>
         </li><!-- .reset-all-confirm -->
       </ul><!-- #option-panels -->
@@ -111,9 +111,10 @@
       <hgroup id="tournament-heads">
         <h1>Event Name</h1>
         <h2>Event Type: <i>0 Rounds</i></h2>
+        <a href="" class="start-event">Start this event</a>
       </hgroup>
-      <div id="brackets">
-        <div class="tourn-round round-template template">
+      <div id="brackets" class="clearfix">
+        <div class="round-template template">
           <h1 class="this-round">Round #</h1>
           <ul class="match match-template template">
               <li><p class="player-name">Name</p></li>
